# deep-generative-models

./: .gitignore  DGM_HW1-P_402203389_Fatemeh_Raeijian.ipynb  DGM_HW3_GAN_Practical.ipynb  README.md  pyproject.toml  requirements.txt
configs/: example_mnist_vae.yaml
notebooks/: DGM_HW1-P_402203389_Fatemeh_Raeijian.ipynb  DGM_HW3_GAN_Practical.ipynb  DGM_HW3_Normalizing Flow_Practical.ipynb  DGM_HW4_Practical_2-2.ipynb
notebooks/practicals/: DGM_HW2_Practical.ipynb  DGM_HW4_Practical_1.ipynb
notebooks/submissions/: DGM_HW2_Practical.ipynb  DGM_HW3_Normalizing Flow_Practical.ipynb
scripts/: evaluate.py  train.py
src/deep_generative_models/: __init__.py  config.py
src/deep_generative_models/data/: __init__.py  datamodule.py
src/deep_generative_models/models/: __init__.py  base.py  flow.py  gan.py  vae.py
src/deep_generative_models/training/: __init__.py  loops.py
src/deep_generative_models/utils/: __init__.py  checkpointing.py  logging.py  visualization.py
